/**
 * @file 
 * @brief
 * "Inserire qui descrizione specifica della classe"
 * @author
 * @date
 * @version
 */

package it.unisa.diem.ingsoft.biblioteca_universitaria_10.userinterface;

import it.unisa.diem.ingsoft.biblioteca_universitaria_10.biblioteca.Autore;
import javafx.scene.control.Button;
import javafx.scene.control.ListView;
import javafx.scene.control.TextField;

public class ControllerSchermataAggiungiLibro {

    private TextField titolo;

    private TextField ISBN;

    private ListView<Autore> autori;

    private TextField nomeAutore;

    private TextField cognomeAutore;

    private TextField anno;

    private Button btnIndietro;

    private Button btnConferma;

    private Button btnAggiungiAutore;
/**
 * @brief "inserire qui descrizione breve"
 * "inserire qui descrizione specifica del metodo"
 * @pre
 * @post
 * @param[in]
 * @param[out]
 * @author
 */
    public void init() {
        // vuoto
    }
/**
 * @brief "inserire qui descrizione breve"
 * "inserire qui descrizione specifica del metodo"
 * @pre
 * @post
 * @param[in]
 * @param[out]
 * @author
 */
    public void aggiungiAutore() {
        // vuoto
    }
/**
 * @brief "inserire qui descrizione breve"
 * "inserire qui descrizione specifica del metodo"
 * @pre
 * @post
 * @param[in]
 * @param[out]
 * @author
 */
    public void tornaIndietro() {
        // vuoto
    }
/**
 * @brief "inserire qui descrizione breve"
 * "inserire qui descrizione specifica del metodo"
 * @pre
 * @post
 * @param[in]
 * @param[out]
 * @author
 */
    public void conferma() {
        // vuoto
    }
}
