@startuml ControllerOnlyCodeExplicit
skinparam linetype ortho
left to right direction

class ControllerSchermataAggiungiLibro {
    - titolo: TextField
    - ISBN: TextField
    - autori: ListView<Autore>
    - nomeAutore: TextField
    - cognomeAutore: TextField
    - anno: TextField
    - btnIndietro: Button
    - btnConferma: Button
    - btnAggiungiAutore: Button

    + init(): void
    + aggiungiAutore(): void
    + tornaIndietro(): void
    + conferma(): void
}

class ControllerSchermataAggiungiPrestito {
    - ISBN: TextField
    - utenti: ListView<Utente>
    - nome: TextField
    - cognome: TextField
    - matricola: TextField
    - email: TextField
    - scadenza: TextField
    - ID: TextField
    - btnIndietro: Button
    - btnConferma: Button

    + init(): void
    + aggiungiUtente(): void
    + rimuoviUtente(): void
    + tornaIndietro(): void
    + conferma(): void
}

class ControllerSchermataAggiungiUtente {
    - nome: TextField
    - cognome: TextField
    - matricola: TextField
    - email: TextField
    - btnIndietro: Button
    - btnConferma: Button

    + init(): void
    + tornaIndietro(): void
    + conferma(): void
}

class ControllerSchermataIniziale {
    - btnLibro: Button
    - btnUtente: Button
    - btnPrestito: Button
    - btnRitardo: Button

    + init(): void
    + schermataLibro(): void
    + schermataUtente(): void
    + schermataPrestito(): void
    + schermataRitardo(): void
}

class ControllerSchermataLibro {
    - btnLista: Button
    - btnAggiungi: Button
    - btnIndietro: Button
    - btnTitolo: Button
    - btnISBN: Button
    - btnPrimoAutore: Button

    + init(): void
    + schermataVisualizzaLibro(): void
    + schermataAggiungiLibro(): void
    + tornaIndietro(): void
    + ordinamentoPerTitolo(): void
    + ordinamentoPerISBN(): void
    + ordinamentoPerAutore(): void
}

class ControllerSchermataModificaLibro {
    - titolo: TextField
    - autori: ListView<Autore>
    - nomeAutore: TextField
    - cognomeAutore: TextField
    - anno: TextField
    - btnIndietro: Button
    - btnConferma: Button
    - btnAggiungiAutore: Button
    - btnRimuoviAutore: Button

    + init(): void
    + aggiungiAutore(): void
    + rimuoviAutore(): void
    + tornaIndietro(): void
    + conferma(): void
}

class ControllerSchermataModificaPrestito {
    - ISBN: TextField
    - utenti: ListView<Utente>
    - nome: TextField
    - cognome: TextField
    - matricola: TextField
    - email: TextField
    - scadenza: TextField
    - ID: TextField
    - prestito: Prestito
    - prestiti: List<Prestito>
    - btnIndietro: Button
    - btnConferma: Button

    + init(prestito: Prestito, prestiti: List<Prestito>): void
    + initBottoni(): void
    + aggiungiUtente(): void
    + rimuoviUtente(): void
    + tornaIndietro(): void
    + conferma(): void
    + ErroreTxt(str: String): void
}

class ControllerSchermataModificaRitardo {
    - ISBN: TextField
    - utenti: ListView<Utente>
    - nome: TextField
    - cognome: TextField
    - matricola: TextField
    - email: TextField
    - scadenza: TextField
    - ID: TextField
    - prestito: Prestito
    - btnIndietro: Button
    - btnConferma: Button

    + init(): void
    + initBottoni(): void
    + aggiungiUtente(): void
    + rimuoviUtente(): void
    + tornaIndietro(): void
    + conferma(): void
}

class ControllerSchermataModificaUtente {
    - nome: TextField
    - cognome: TextField
    - matricola: TextField
    - email: TextField
    - btnIndietro: Button
    - btnConferma: Button

    + init(): void
    + tornaIndietro(): void
    + conferma(): void
}

class ControllerSchermataPrestito {
    - btnLista: Button
    - btnAggiungi: Button
    - btnIndietro: Button

    + init(): void
    + schermataVisualizzaPrestito(): void
    + schermataAggiungiPrestito(): void
    + tornaIndietro(): void
}

class ControllerSchermataPrincipale {
    - btnEntra: Button

    + init(): void
    + entra(): void
}

class ControllerSchermataRitardo {
    - btnLista: Button
    - btnAggiungi: Button
    - btnIndietro: Button

    + init(): void
    + schermataVisualizzaRitardo(): void
    + tornaIndietro(): void
}

class ControllerSchermataUtente {
    - btnLista: Button
    - btnAggiungi: Button
    - btnIndietro: Button

    + init(): void
    + schermataVisualizzaUtente(): void
    + schermataAggiungiUtente(): void
    + tornaIndietro(): void
}

class ControllerSchermataVisualizzaLibro {
    - tabellaLibro: TableView<Libro>
    - colonnaTitolo: TableColumn<Libro,String>
    - colonnaAutori: TableColumn<Libro,String>
    - colonnaAnno: TableColumn<Libro,Integer>
    - colonnaISBN: TableColumn<Libro,String>
    - colonnaElimina: TableColumn<Libro,Void>
    - colonnaModifica: TableColumn<Libro,Void>
    - btnIndietro: Button
    - btnRicerca: Button
    - input: TextField

    + init(): void
    + aggiungiBtnModifica(): void
    + aggiungiBtnElimina(): void
    + tornaIndietro(): void
    + cerca(): void
}

class ControllerSchermataVisualizzaPrestito {
    - tabellaPrestito: TableView<Prestito>
    - colonnaISBN: TableColumn<Prestito,String>
    - colonnaUtente: TableColumn<Prestito,Utente>
    - colonnaID: TableColumn<Prestito,Integer>
    - colonnaScadenza: TableColumn<Prestito,LocalDate>
    - colonnaElimina: TableColumn<Prestito,Void>
    - colonnaModifica: TableColumn<Prestito,Void>
    - btnIndietro: Button
    - btnRicerca: Button

    + init(): void
    + aggiungiBtnModifica(): void
    + aggiungiBtnElimina(): void
    + cerca(): void
    + tornaIndietro(): void
}

class ControllerSchermataVisualizzaRitardo {
    - tabellaRitardo: TableView<Prestito>
    - colonnaISBN: TableColumn<Prestito,String>
    - colonnaUtente: TableColumn<Prestito,Utente>
    - colonnaID: TableColumn<Prestito,Integer>
    - colonnaScadenza: TableColumn<Prestito,LocalDate>
    - colonnaElimina: TableColumn<Prestito,Void>
    - colonnaModifica: TableColumn<Prestito,Void>
    - btnIndietro: Button
    - btnRicerca: Button

    + init(): void
    + aggiungiBtnModifica(): void
    + aggiungiBtnElimina(): void
    + cerca(): void
    + tornaIndietro(): void
}

class ControllerSchermataVisualizzaUtente {
    - tabellaUtente: TableView<Utente>
    - colonnaNome: TableColumn<Utente,String>
    - colonnaCognome: TableColumn<Utente,String>
    - colonnaMatricola: TableColumn<Utente,Integer>
    - colonnaEmail: TableColumn<Utente,String>
    - colonnaElimina: TableColumn<Utente,Void>
    - colonnaModifica: TableColumn<Utente,Void>
    - btnIndietro: Button
    - btnRicerca: Button

    + init(): void
    + aggiungiBtnModifica(): void
    + aggiungiBtnElimina(): void
    + tornaIndietro(): void
    + cerca(): void
}

ControllerSchermataPrincipale ..> ControllerSchermataIniziale
ControllerSchermataIniziale ..> ControllerSchermataLibro
ControllerSchermataIniziale ..> ControllerSchermataPrestito
ControllerSchermataIniziale ..> ControllerSchermataUtente
ControllerSchermataIniziale ..> ControllerSchermataRitardo

ControllerSchermataLibro ..> ControllerSchermataVisualizzaLibro
ControllerSchermataLibro ..> ControllerSchermataAggiungiLibro
ControllerSchermataVisualizzaLibro ..> ControllerSchermataModificaLibro

ControllerSchermataUtente ..> ControllerSchermataVisualizzaUtente
ControllerSchermataUtente ..> ControllerSchermataAggiungiUtente
ControllerSchermataVisualizzaUtente ..> ControllerSchermataModificaUtente

ControllerSchermataPrestito ..> ControllerSchermataVisualizzaPrestito
ControllerSchermataPrestito ..> ControllerSchermataAggiungiPrestito
ControllerSchermataVisualizzaPrestito ..> ControllerSchermataModificaPrestito 
ControllerSchermataRitardo ..> ControllerSchermataVisualizzaRitardo
ControllerSchermataVisualizzaRitardo ..>ControllerSchermataModificaRitardo


@enduml